[package]
name = "retina-record"
version = "0.1.0"
edition = "2021"
rust-version = "1.64"
authors = [
    "Andrew Straw <strawman@astraw.com>",
]
repository = "https://github.com/strawlab/iana-time-zone"
license = "MIT OR Apache-2.0"
categories = ["network-programming", "multimedia::video"]

[dependencies]
bytes = "1.0.1"
futures = "0.3.14"
retina = "0.4.7"
tokio = { version = "1.5.0", features = ["fs", "io-util", "macros", "rt-multi-thread", "signal"] }
url = "2.2.1"
anyhow = "1.0.41"
clap = { version = "4.1.4", features = ["derive"] }
chrono = { version = "0.4.34", features = ["serde"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
